# stbe-based-weblog

./: CMakeLists.txt  CMakeLists.txt.in  README.md
include/: weblog-decoder.h  weblog-encoder.h  weblog-record.h
src/: main.cpp  weblog-decoder.cpp  weblog-encoder.cpp
